Update FavoritesPage.java